# Stage-2A

./: .gitignore
src/formation_control/: README.md  package.xml  setup.py
src/formation_control/config/: fastdds_unicast.xml  formations.yaml
src/formation_control/formation_control/: detector.py  follower_node.py  formations.py  recorder_node.py  teleop_zqsd.py  tracker_node.py  wander_node.py
src/formation_control/launch/: follower.launch.py  leader.launch.py  robot_behavior.launch.py  robot_bringup.launch.py  robot_dataset.launch.py  robot_full.launch.py  robot_namespaced.launch.py
src/formation_control/scripts/: temporaire.py  ttb.sh
src/formation_control/tools/: README.md  assemble_video.sh  bag_to_csv.py  calibrate_hsv.py  concat_segments.sh  dataset_tools.sh  deploy_build.sh  hsv_tuner.py  launcher_gui.py  lidar_monitor.py  rebuild_videos.sh  tidy_dataset.py
